@@ -46,8 +46,9 @@ extern int __versionsort64 (const struct dirent64 **a,
 extern DIR *__alloc_dir (int fd, bool close_fd, int flags,
 			 const struct stat64 *statp)
      internal_function;
-extern void __scandir_cancel_handler (void *arg);
 extern __typeof (rewinddir) __rewinddir;
+
+extern void __scandir_cancel_handler (void *arg) attribute_hidden;
 
 libc_hidden_proto (__rewinddir)
 extern __typeof (scandirat) __scandirat;
