@@ -21,7 +21,6 @@
 #define SCANDIRAT scandirat64
 #define READDIR __readdir64
 #define DIRENT_TYPE struct dirent64
-#define SKIP_SCANDIR_CANCEL 1
 
 #include <dirent/scandir.c>
 
